k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-sample-service
spec:
  selector:
    app: django-sample-app  # Matches the labels of your pods
  ports:
    - protocol: TCP
      port: 80  # The port your service will listen on
      targetPort: 80  # The port your pods are listening on
  type: LoadBalancer  # Change this to NodePort, ClusterIP, or other types as needed
